fix: update ui send email(2)

--- a/src/utils/mails/templates/registration-succes.ejs
+++ b/src/utils/mails/templates/registration-succes.ejs
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Aktivasi Akun siVolunteer</title>
+    <title>Activation Account SiVolunteer</title>
   </head>
   <body
     style="
@@ -43,41 +43,32 @@
                 "
               >
                 <h1 style="margin: 0; color: #ffffff; font-size: 24px">
-                  🎉 Selamat Datang di
-                  <span style="color: #ffe600">siVolunteer</span>
+                  Selamat Datang di
+                  <span style="color: #ffe600">SiVolunteer</span>
                 </h1>
               </td>
             </tr>
-
-            <!-- Body -->
             <tr>
               <td style="padding: 40px 50px; color: #333">
-                <p
-                  style="font-size: 18px; font-weight: 600; margin-bottom: 20px"
-                >
+                <p style="font-size: 20px; font-weight: bold">
                   Hai <%= username %>,
                 </p>
 
                 <p style="margin-bottom: 20px">
                   Terima kasih telah bergabung bersama kami di
-                  <strong>siVolunteer</strong>. Kamu telah mengambil langkah
-                  pertama untuk menjadi bagian dari gerakan positif 💪.
+                  <strong>SiVolunteer</strong>. Kamu telah mengambil langkah
+                  pertama untuk menjadi bagian dari gerakan positif.
                 </p>
 
                 <table
                   width="100%"
                   cellpadding="0"
                   cellspacing="0"
-                  style="
-                    background-color: #f0f4ff;
-                    border-radius: 10px;
-                    padding: 20px;
-                    margin: 20px 0;
-                  "
+                  style="background-color: #f0f4ff; border-radius: 10px"
                 >
                   <tr>
                     <td style="padding: 20px">
-                      <p style="margin: 0 0 8px">
+                      <p style="margin: 0 0 5px; font-size: large">
                         <strong>📄 Informasi Pendaftaran:</strong>
                       </p>
                       <p style="margin: 0">
@@ -103,7 +94,7 @@
                     href="<%= activationLink %>"
                     style="
                       display: inline-block;
-                      padding: 14px 28px;
+                      padding: 14px 25px;
                       background-color: #0d6efd;
                       color: #ffffff;
                       font-weight: 600;
@@ -126,8 +117,6 @@
                 </p>
               </td>
             </tr>
-
-            <!-- Footer -->
             <tr>
               <td
                 style="
